complaint seen flag fuctionality and image shape corrected

--- a/app/src/main/res/layout/activity_addcomplaint.xml
+++ b/app/src/main/res/layout/activity_addcomplaint.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blueshade1"
-    tools:context=".Addmembers">
+    tools:context=".addComplaint">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -20,7 +20,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
             android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -34,8 +33,9 @@
 
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
                     android:layout_marginTop="25dp"
-                    android:layout_marginEnd="40dp"
+                    android:layout_marginRight="20dp"
                     android:padding="10dp"
                     android:textColorHint="#FFFFFF"
                     app:hintTextColor="#00FFFF"
@@ -44,8 +44,7 @@
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.18"
-                    tools:layout_marginStart="40dp">
+                    app:layout_constraintVertical_bias="0.18">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/inputcomptitle"
@@ -61,8 +60,9 @@
                     android:id="@+id/genderlayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
                     android:layout_marginTop="44dp"
-                    android:layout_marginEnd="40dp"
+                    android:layout_marginRight="20dp"
                     android:padding="10dp"
                     android:textColorHint="#FFFFFF"
                     app:hintTextColor="#00FFFF"
@@ -71,8 +71,7 @@
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.435"
-                    tools:layout_marginStart="40dp">
+                    app:layout_constraintVertical_bias="0.435">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/inputcompdesc"
@@ -84,39 +83,42 @@
                         android:textSize="16sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
+
                 <TextView
                     android:id="@+id/textView"
-                    android:layout_width="316dp"
-                    android:layout_height="54dp"
+                    android:layout_width="305dp"
+                    android:layout_height="37dp"
                     android:layout_marginStart="-10dp"
                     android:fontFamily="@font/audiowide"
-                    android:text="Add Complaint"
+                    android:text="Add Complaints"
                     android:textAlignment="center"
                     android:textColor="#00DDFF"
                     android:textSize="34sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.213"
+                    app:layout_constraintHorizontal_bias="0.442"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.052" />
-
+                    app:layout_constraintVertical_bias="0.085" />
 
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/inputcompimage"
-                    android:layout_width="154dp"
-                    android:layout_height="117dp"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
+                    android:padding="3dp"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/common_google_signin_btn_icon_dark_normal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.067"
+                    app:layout_constraintHorizontal_bias="0.205"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.782"
-                    app:shapeAppearance="@style/CircularImageview"
+                    app:layout_constraintVertical_bias="0.775"
+                    app:shapeAppearance="@style/roundrect"
                     app:strokeColor="@color/blueshade1"
-                    tools:src="@drawable/uploadfile"
+                    app:strokeWidth="5dp"
+                    tools:src="@tools:sample/avatars"
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <Button
@@ -141,6 +143,21 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.937" />
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/flbuttonback"
+                    android:layout_width="56dp"
+                    android:layout_height="53dp"
+                    android:clickable="true"
+                    app:backgroundTint="#5F54A2"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.02"
+                    app:rippleColor="#FF0000"
+                    app:srcCompat="@drawable/backbutton" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
