--- a/app/src/main/res/layout/activity_complaintlist.xml
+++ b/app/src/main/res/layout/activity_complaintlist.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Memberlist">
+    tools:context=".Complaintlist">
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -32,5 +32,20 @@
         app:layout_constraintVertical_bias="0.918"
         app:rippleColor="#FF0000"
         app:srcCompat="@drawable/baseline_add_24" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/flbuttonback"
+        android:layout_width="56dp"
+        android:layout_height="53dp"
+        android:clickable="true"
+        app:backgroundTint="#5F54A2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.039"
+        app:rippleColor="#FF0000"
+        app:srcCompat="@drawable/backbutton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
