--- a/app/src/main/res/layout/complaintmodel.xml
+++ b/app/src/main/res/layout/complaintmodel.xml
@@ -4,45 +4,54 @@
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="17dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="7dp"
     android:elevation="15dp"
     app:cardCornerRadius="15dp"
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:id="@+id/cardview"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#356A7A"
         android:paddingLeft="25dp"
         android:paddingTop="10dp"
-        android:paddingRight="15dp"
+        android:paddingRight="0dp"
         android:paddingBottom="10dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/setcompimg"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
 
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_centerInParent="false"
             android:layout_gravity="center|center_vertical"
-            android:layout_marginStart="120dp"
+            android:layout_marginStart="100dp"
             android:layout_marginTop="70dp"
             android:foregroundGravity="center"
+            android:padding="3dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/googleg_standard_color_18"
+
             app:civ_border_color="#FF000000"
-            app:civ_border_width="1dp" />
+            app:civ_border_width="1dp"
+            app:shapeAppearance="@style/roundrect"
+            app:strokeColor="@color/blueshade1"
+            app:strokeWidth="5dp"
+
+
+            />
 
         <TextView
             android:id="@+id/setcomptitle"
-            android:layout_width="145dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignWithParentIfMissing="true"
-            android:layout_alignBaseline="@id/setcompimg"
             android:layout_alignParentStart="false"
             android:layout_alignParentLeft="false"
             android:layout_alignParentTop="true"
@@ -51,8 +60,8 @@
             android:layout_alignParentBottom="false"
             android:layout_centerInParent="false"
             android:layout_centerHorizontal="false"
-            android:layout_marginLeft="100dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginLeft="-20dp"
+            android:layout_marginTop="22dp"
             android:layout_marginBottom="72dp"
             android:gravity="center"
             android:text="Title"
@@ -61,7 +70,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/setcomdesc"
+            android:id="@+id/setcompdesc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignWithParentIfMissing="false"
@@ -71,7 +80,6 @@
             android:layout_marginStart="0dp"
             android:layout_marginLeft="40dp"
             android:layout_marginTop="20dp"
-            android:gravity="center"
             android:text="desc"
             android:textAlignment="viewStart"
             android:textColor="#FFFFFF"
@@ -95,6 +103,23 @@
             app:layout_constraintVertical_bias="0.918"
             app:rippleColor="#FF0000"
             app:srcCompat="@drawable/delete" />
+
+
+        <TextView
+            android:id="@+id/status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignWithParentIfMissing="false"
+            android:layout_below="@id/setcompimg"
+            android:layout_centerInParent="false"
+            android:layout_centerHorizontal="false"
+            android:layout_marginLeft="285dp"
+            android:layout_marginTop="-35dp"
+            android:text="desc"
+            android:textAlignment="viewStart"
+            android:textColor="#FFD600"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
